<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="my.own.FakeTinderApp.StartSubject">


    <EditText
        android:id="@+id/subNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/please_enter_subject_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/icons"
        android:textColorHint="@color/icons" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="181dp"
        android:background="@drawable/roundbutton"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/submit"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@+id/btnSubmit"
        android:background="@drawable/roundbutton"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/create_file"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@+id/btnSubmit"
        android:background="@drawable/roundbutton"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/clear_history"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/prevSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="150dp"
        android:textColor="@color/icons"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/crafty_girls"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="10sp"
        android:text="@string/experimental_tinder_app"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/icons"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="sans" />

</RelativeLayout>